Added updates for Version 0.0.2

--- a/html/popup.html
+++ b/html/popup.html
@@ -14,8 +14,9 @@
                 <a id="quality">Smaller file size</a>
                 <a id="fps">60FPS video</a>
                 <a href="https://github.com/allaboutishaan/screensy" target="_blank">GitHub</a>
-                <a id="rateextension" href="https://chrome.google.com/webstore/detail/Screensy-screen-recorder/kbbdabhdfibnancpjfhlkhafgdilcnji" target="_blank">Rate extension</a>
-                <a href="https://twitter.com/allaboutishaan" target="_blank">Made by Ishaan</a>
+                <a id="rateextension"
+                    href="https://chrome.google.com/webstore/detail/screensy-screen-recorder/kdabkldmfdgpcmgdmhbalcljffbfamia" target="_blank">Rate extension</a>
+                <a href="https://allaboutishaan.com" target="_blank">Made by Ishaan</a>
             </div>
         </div>
         <div id='tabs'>
